--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "open-jsonrpc-provider": "^0.2.1"
   },
   "peerDependencies": {
-    "ethers": "^6.13.1"
+    "ethers": "6.13.1"
   },
   "types": "./lib.commonjs/index.d.ts",
   "directories": {
